Fixed overflow issue by changing height of body css

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 html,body{
-    height: 100%;
-    min-height: 100vh;
     background-color: #D8DDCF !important;
-    overflow: hidden;
     vertical-align: baseline;
-
 }
 
 h1, h2, h3, h4, h5{
@@ -170,6 +166,12 @@ option{
 @media screen and (max-width: 800px) {
     .parent {
         padding: 0;   
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        overflow: visible !important;   
     }
 }
 
